Source/JavaScriptCore/bytecode/BytecodeIntrinsicRegistry.h
@@ -61,6 +61,12 @@ class Identifier;
     macro(symbolMatch) \
     macro(symbolSearch) \
     macro(symbolSpecies) \
+    macro(GeneratorResumeModeNormal) \
+    macro(GeneratorResumeModeThrow) \
+    macro(GeneratorResumeModeReturn) \
+    macro(GeneratorStateCompleted) \
+    macro(GeneratorStateExecuting) \
+
 
 class BytecodeIntrinsicRegistry {
     WTF_MAKE_NONCOPYABLE(BytecodeIntrinsicRegistry);
